samples/_failures_safe/1761156564_e0392c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cf623a8.c: In function ‘main’:
./samples/SAFE/__tmp_6cf623a8.c:130:5: error: expected declaration or statement at end of input
  130 |     }
      |     ^
